--- a/css/styles.css
+++ b/css/styles.css
@@ -54,12 +54,14 @@ img {
   color: #404bbf;
 }
 
-.container-header {
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.container {
   display: flex;
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px 0 15px;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .page-logo {
@@ -83,19 +85,21 @@ img {
 }
 
 .page-address {
-  display: flex;
-  gap: 40px;
   font-style: normal;
   padding-left: 332px;
   padding-right: 156px;
   margin-bottom: 24px;
 }
 
+.address-item {
+  display: flex;
+  gap: 40px;
+}
+
 .menu {
   color: #2e2f42;
   display: flex;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .menu-link {
@@ -103,6 +107,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
 .menu-link:hover,
@@ -167,6 +172,17 @@ img {
   padding: 120px 0;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  border: 0 !important;
+}
+
 .advantages-list-title {
   font-weight: 500;
   font-size: 20px;
@@ -203,12 +219,12 @@ img {
   text-align: center;
   color: #2e2f42;
   margin-bottom: 72px;
-  padding: 120px 0;
 }
 
 .team {
   background-color: #f4f4fd;
   margin-bottom: 120px;
+  padding: 120px 0;
 }
 
 .team-list {
@@ -238,9 +254,8 @@ img {
 .team-list-item {
   background-color: #ffffff;
   padding: 0px 0px 32px 0px;
-  width: 264px;
-  height: 380px;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .team-list-title {
@@ -250,6 +265,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-list-text {
@@ -264,9 +280,6 @@ img {
 /* Section 4 */
 .portfolio {
   margin: 156px;
-}
-
-.container-section-04 {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -304,6 +317,7 @@ img {
   border-right: 1px solid #e7e9fc;
   padding: 32px 16px;
   width: 360px;
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-list-title {
@@ -312,7 +326,6 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -321,7 +334,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .portfolio-img {
