--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,12 @@ img {
 .contacts-list-link:hover,
 .contacts-list-link:focus {
   color: #404bbf;
-  color: #404bbf;
 }
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
 }
+
 .container {
   display: flex;
   width: 1158px;
@@ -173,14 +173,17 @@ img {
 }
 
 .visually-hidden {
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  border: 0 !important;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .advantages-list-title {
