--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,7 @@
 ul,
 ol {
   list-style-type: none;
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -17,8 +16,7 @@ h2,
 h3,
 h4,
 p {
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0;
 }
 button {
   cursor: pointer;
@@ -58,10 +56,14 @@ img {
 }
 
 .container {
-  display: flex;
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px 0 15px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
 .page-logo {
@@ -86,9 +88,7 @@ img {
 
 .page-address {
   font-style: normal;
-  padding-left: 332px;
-  padding-right: 156px;
-  margin-bottom: 24px;
+  margin-left: auto;
 }
 
 .address-item {
@@ -108,6 +108,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 24px 0;
+  display: block;
 }
 
 .menu-link:hover,
@@ -125,23 +126,13 @@ img {
   text-align: center;
   color: #fff;
   width: 496px;
+  margin: 0 auto;
   margin-bottom: 48px;
   max-width: 496px;
 }
 
 .hero {
-  display: flex;
   background-color: #2e2f42;
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-  align-content: center;
-  height: 600px;
-  align-items: center;
-  margin-bottom: 120px;
   padding: 188px 0;
 }
 
@@ -157,8 +148,8 @@ img {
   background-color: #4d5ae5;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
   height: 56px;
+  margin: 0 auto;
 }
 
 .buy-now-btn:hover,
@@ -206,7 +197,6 @@ img {
   display: flex;
   gap: 24px;
   align-items: center;
-  margin-left: 24px;
 }
 
 .advantages-list-item {
@@ -226,21 +216,17 @@ img {
 
 .team {
   background-color: #f4f4fd;
-  margin-bottom: 120px;
   padding: 120px 0;
 }
 
 .team-list {
   display: flex;
   gap: 24px;
-  flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
 .section-title {
   text-transform: capitalize;
-  margin-top: 120px;
   margin-bottom: 72px;
 }
 
@@ -251,12 +237,10 @@ img {
 .box-team {
   padding: 32px 0;
   text-align: center;
-  margin-bottom: 8px;
 }
 
 .team-list-item {
   background-color: #ffffff;
-  padding: 0px 0px 32px 0px;
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 72px) / 4);
 }
@@ -282,7 +266,6 @@ img {
 
 /* Section 4 */
 .portfolio {
-  margin: 156px;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -301,7 +284,6 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   column-gap: 24px;
   row-gap: 48px;
 }
@@ -310,16 +292,9 @@ img {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
 .portfolio-item {
-  margin-bottom: 48px;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 16px;
-  width: 360px;
   width: calc((100% - 48px) / 3);
 }
 
@@ -329,6 +304,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -337,7 +313,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 8px;
 }
 
 .portfolio-img {
