--- a/css/styles.css
+++ b/css/styles.css
@@ -97,9 +97,25 @@ img {
 }
 
 .menu {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #2e2f42;
   display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
   gap: 40px;
+  margin: auto;
+}
+
+.menu-item {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .menu-link {
@@ -111,12 +127,30 @@ img {
   display: block;
 }
 
+.menu .studio {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu .studio::after {
+  content: "";
+  width: 100%;
+  border-radius: 2px;
+  background-color: #404bbf;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
 }
 
-/* Main styles */
+/* Section 1 */
 
 .main-title {
   font-weight: 700;
@@ -133,7 +167,26 @@ img {
 
 .hero {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/people-office.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  text-align: center;
   padding: 188px 0;
+  align-items: center;
+  margin: 0 auto;
+  height: 600;
+  max-width: 1440px;
 }
 
 .buy-now-btn {
@@ -154,7 +207,6 @@ img {
 
 .buy-now-btn:hover,
 .buy-now-btn:focus {
-  color: #404bbf;
   background-color: #404bbf;
 }
 
@@ -170,11 +222,16 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.list-second {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
 }
 
 .advantages-list-title {
@@ -185,6 +242,7 @@ img {
   color: #2e2f42;
   margin-bottom: 8px;
 }
+
 .advantages-list-text {
   font-weight: 400;
   font-size: 16px;
@@ -203,7 +261,20 @@ img {
   width: calc((100% - 72px) / 4);
 }
 
+.advantages-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  min-width: 264px;
+  margin-bottom: 8px;
+}
+
 /*Section 3*/
+
 .section-title {
   font-weight: 700;
   font-size: 36px;
@@ -225,24 +296,31 @@ img {
   justify-content: center;
 }
 
+.team-list-item {
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
+}
+
+.team-list .team-list-item {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 .section-title {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
 
 .team-list-img {
+  display: block;
+  max-width: 100%;
   background: #fff;
 }
 
 .box-team {
   padding: 32px 0;
   text-align: center;
-}
-
-.team-list-item {
-  background-color: #ffffff;
-  border-radius: 0px 0px 4px 4px;
-  width: calc((100% - 72px) / 4);
 }
 
 .team-list-title {
@@ -264,10 +342,55 @@ img {
   color: #434455;
 }
 
+.social-links {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.social-items {
+  width: 40px;
+  height: 40px;
+}
+
+.icons-team-links {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icons {
+  fill: #f4f4fd;
+}
+
 /* Section 4 */
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+
+.portfolio-container {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.overlay-pag {
+  position: absolute;
+  top: 0;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-section {
@@ -296,6 +419,7 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-title {
@@ -316,9 +440,8 @@ img {
 }
 
 .portfolio-img {
-  background: #fff;
-  width: 360px;
-  height: 300px;
+  display: block;
+  max-width: 100%;
 }
 
 /* Footer styles */
@@ -354,4 +477,52 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+}
+
+.container-footer-logo {
+  display: flex;
+  align-items: baseline;
+}
+
+.container-footer-icons:hover,
+.container-footer-icons:focus {
+  stroke: #31d0aa;
+}
+
+.foot-second {
+  margin-right: 120px;
+}
+
+.social-p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-list-icons {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-item-icons {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-links {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icons {
+  fill: #f4f4fd;
 }
