--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,8 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -94,6 +96,10 @@ img {
 .address-item {
   display: flex;
   gap: 40px;
+}
+
+.address-list-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu {
@@ -203,6 +209,7 @@ img {
   padding: 16px 32px;
   height: 56px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buy-now-btn:hover,
@@ -364,6 +371,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icons-team-links:hover,
+.icons-team-links:focus {
+  background-color: #404bbf;
+}
+
 .team-icons {
   fill: #f4f4fd;
 }
@@ -420,6 +432,12 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .portfolio-list-title {
@@ -510,6 +528,10 @@ img {
 .footer-item-icons {
   width: 40px;
   height: 40px;
+}
+
+.footer-item-icons:hover .footer-item-icons:focus {
+  background-color: #31d0aa;
 }
 
 .footer-social-links {
