--- a/css/styles.css
+++ b/css/styles.css
@@ -96,9 +96,6 @@ img {
 .address-item {
   display: flex;
   gap: 40px;
-}
-
-.address-list-item {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -437,6 +434,9 @@ img {
 .portfolio-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-pag:hover {
   transform: translateY(0%);
 }
 
@@ -502,9 +502,9 @@ img {
   align-items: baseline;
 }
 
-.container-footer-icons:hover,
-.container-footer-icons:focus {
-  stroke: #31d0aa;
+.footer-social-links:hover,
+.footer-social-links:focus {
+  background-color: #31d0aa;
 }
 
 .foot-second {
