--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list-link:hover,
@@ -96,7 +97,6 @@ img {
 .address-item {
   display: flex;
   gap: 40px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu {
@@ -386,18 +386,23 @@ img {
 .portfolio-container {
   position: relative;
   overflow: hidden;
-  cursor: pointer;
+}
+
+.portfolio-item:hover .overlay-pag {
+  transform: translateY(0%);
 }
 
 .overlay-pag {
   position: absolute;
   top: 0;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
+  width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -428,6 +433,7 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -455,11 +461,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-
-.portfolio-img {
-  display: block;
-  max-width: 100%;
 }
 
 /* Footer styles */
